# rust_workspace

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: mac.yml  ubuntu.yml  windows.yml
app1/: Cargo.toml
app1/src/: main.rs  models.rs  utils.rs
app2/: ARCHITECTURE.md  Cargo.toml  MVC_LAYERS.md  README.md  SUMMARY.md  test_api.sh
app2/src/: main.rs  router.rs  server.rs
app2/src/controllers/: health_controller.rs  message_controller.rs  mod.rs  page_controller.rs
app2/src/models/: api_response.rs  health.rs  message.rs  mod.rs
app2/src/services/: health_service.rs  message_service.rs  mod.rs
app2/src/views/: html_view.rs  json_view.rs  mod.rs
app2/templates/: home.html
shared/: Cargo.toml
shared/src/: lib.rs
web-app/: ARCHITECTURE.md  Cargo.toml  License  README.md  docker-compose.yml  index.html
web-app/src/: app.rs  main.rs  router.rs
web-app/src/components/: footer.rs  nav.rs
web-app/src/pages/: about.rs  home.rs  mod.rs  not_found.rs
web-app/styles/: _about.scss  _base.scss  _components.scss  _footer.scss  _home.scss  _layout.scss  _mixins.scss  _navbar.scss  _variables.scss  main.scss
