[package]
name = "app2"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "app2"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde.workspace = true
serde_json = "1.0"
chrono.workspace = true
